# yazik

./: .buckconfig  .gitignore  CMakeLists.txt  main.cpp
src/atomics/: baton.cpp  baton.hpp  rwx_spinlock.cpp  rwx_spinlock.hpp
src/o2tree/: o2tree-inl.hpp  o2tree.hpp
src/utils/: compute.cpp  compute.hpp
tests/: BUCK  main.cpp  test.cpp  testapple.mm
tests/synca/src/: gc.cpp
tools/proj/: yaziktools.sln  yaziktools.userprefs
tools/proj/yaziktools/: Program.fs  buck_cxx_libraries_to_json.py  yaziktools.fsproj
yazik/: BUCK
yazik/include/: intrusive_ptr.hpp
yazik/include/atomics/: rwx_spinlock.hpp  spinlock.hpp
yazik/include/details/: atomics.hpp
yazik/include/macro/: capitalizer.h  cloak.h  get_n_arg.h  property.h
yazik/include/o2tree/: o2tree-inl.hpp  o2tree.hpp
yazik/include/utils/: baton.hpp  compute.hpp  inline_allocator.hpp  misc.hpp  ref_counted.hpp
yazik/src/atomics/: baton.cpp  rwx_spinlock.cpp
yazik/src/utils/: compute.cpp
